--- a/funnel/templates/layout.html
+++ b/funnel/templates/layout.html
@@ -12,24 +12,20 @@
       <form>
         <fieldset>
           <div class="form-group">
-            <select class="form-control">
-              <option>Keyword</option>
-            </select>
+            <input type="text" name="keyword" class="form-control">
+            <label for="keyword">Keyword</label>
           </div>
           <div class="form-group">
-            <select class="form-control">
-              <option>Type</option>
-            </select>
+            <input type="text" name="type" class="form-control">
+            <label for="type">Type</label>
           </div>
           <div class="form-group">
-            <select class="form-control">
-              <option>Category</option>
-            </select>
+            <input type="text" name="category" class="form-control">
+            <label for="category">Category</label>
           </div>
           <div class="form-group">
-            <select class="form-control">
-              <option>Location</option>
-            </select>
+            <input type="text" name="location" class="form-control">
+            <label for="location">Location</label>
           </div>
           <button type="submit" class="btn btn-primary">Search</button>
         </fieldset>
