--- a/funnel/templates/proposal.html.jinja2
+++ b/funnel/templates/proposal.html.jinja2
@@ -125,11 +125,9 @@
         </div>
       </div>
       <div class="row">
-        {%- if proposal_move_form %}
-        <div class="col-xs-12 col-lg-12">
-          {{ renderform(proposal_move_form, 'proposal-move', action=proposal.url_for('move-to'), submit="Move") }}
-        </div>
-        {%- endif %}
+        <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#adminModal">
+          Admin
+        </button>
       </div>
     </div>
     <div class="section bar">
@@ -201,24 +199,6 @@
                   {% endfor %}
                 {% endif %}
               {% endfor %}
-
-              <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 pull-right">
-                <h3>Status:
-                  {% if proposal.state.SCHEDULED %}
-                    <mark><a class="" href="{{ proposal.session.url_for() }}">{{ proposal.state.SCHEDULED.label.title }}</a></mark>
-                  {% else %}
-                    {{ proposal.state.label.title }}
-                  {% endif %}
-                </h3>
-                <form action="{{ proposal.url_for('transition') }}" method="post" class="form-inline">
-                  {{ transitionform.hidden_tag() }}
-                  <p>
-                  {% for name, transition in transitionform.transition.choices %}
-                    <button name="transition" value="{{ name }}" class="transition control-group btn btn-{{ transition.data['type'] }}">{{ transition.data['title'] }}</button>
-                  {% endfor %}
-                  </p>
-                </form>
-              </div>
             </div>
           {% endif %}
           {% if proposal.preview_video or proposal.slides %}
@@ -336,6 +316,54 @@
     {%- else -%}
       <i class="fa fa-chevron-right"></i>
     {%- endif -%}
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="adminModal" tabindex="-1" role="dialog" aria-labelledby="adminModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Proposal Admin</h4>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          {%- if proposal_move_form %}
+          <div class="col-xs-12 col-lg-12">
+            {{ renderform(proposal_move_form, 'proposal-move', action=proposal.url_for('move-to'), submit="Move") }}
+          </div>
+          {%- endif %}
+        </div>
+        <div class="row">
+          <div class="col-sm-12 col-xs-12">
+            <h3>Status: {% if proposal.state.SCHEDULED %}
+              <mark>
+                <a class="" href="{{ proposal.session.url_for() }}">{{ proposal.state.SCHEDULED.label.title }}</a>
+              </mark>
+              {% else %} {{ proposal.state.label.title }} {% endif %}
+            </h3>
+            <form action="{{ proposal.url_for('transition') }}" method="post" class="form-inline">
+              {{ transitionform.hidden_tag() }}
+              <p>
+                {% for name, transition in transitionform.transition.choices %}
+                <button name="transition" value="{{ name }}" class="transition control-group btn btn-{{ transition.data['type'] }}">{{ transition.data['title'] }}</button>
+                {% endfor %}
+              </p>
+            </form>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12 col-xs-12">
+            {{ renderform(proposal_transfer_form, 'proposal-transfer', action="#", submit="Transfer") }}
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
   </div>
 </div>
 
