--- a/funnel/templates/index.html.jinja2
+++ b/funnel/templates/index.html.jinja2
@@ -1,96 +1,45 @@
-{% extends "layout.html.jinja2" %}
+{% extends "home.html.jinja2" %}
 
-{% block titletags -%}
-  <title>{% if g.profile %}{{ g.profile.title }}{% else %}{{ config['SITE_TITLE'] }}{% endif %}</title>
-  <meta name="DC.title" content="{% if g.profile %}{{ g.profile.title }}{% else %}{{ config['SITE_TITLE'] }}{% endif %}"/>
-{%- endblock %}
+{%- block headers %}
+    
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#4DBA87">
 
-{% block description %}{% if g.profile %}{{ g.profile.description|striptags }}{% else %}{{ config['WELCOME_MESSAGE'] }}{% endif %}{% endblock %}
-
-{% block banner %}
-  <div class="banner">
-    <img src="https://images.hasgeek.com/embed/file/7b85c5c57c86417aa775d5d24d910832" class="banner__img banner__img--mobile"/>
-    <img src="https://images.hasgeek.com/embed/file/4e439ffc2b334e4b9732a292a541137c" class="banner__img banner__img--web"/>
-    <h1 class="banner__headline">HasGeek creates discussion<br class="mui--visible-md-block mui--visible-lg-block mui--visible-xl-block"> spaces for geeks</h1>
-  </div>
+    
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="js">
+    <link rel="apple-touch-icon" href="/static/img/icons/apple-touch-icon-152x152.png">
+    <link rel="mask-icon" href="/static/img/icons/safari-pinned-tab.svg" color="#4DBA87">
+    
+    <meta name="msapplication-TileImage" content="/static/img/icons/msapplication-icon-144x144.png">
+    <meta name="msapplication-TileColor" content="#000000">
+    
+    <link rel="prefetch" href="/static/build/js/0.09ec56c0ddc8817844b5.js" as="script">
+    <link rel="preload" href="/static/build/js/vendor.b411de1678903c8a4c80.js" as="script">
+    <link rel="preload" href="/static/build/js/app.32d2de4772f4f9fb719f.js" as="script">
+    <link rel="preload" href="/static/build/css/app.a714d73c6c4536062f12a018429f511f.css" as="style">
+    <link rel="prefetch" href="/static/build/js/3.d4872d0df50429cbc318.js" as="script">
+    <link rel="prefetch" href="/static/build/js/4.c469c9cad57b2d6da6a2.js" as="script">
+    <link rel="prefetch" href="/static/build/js/5.a26767071ecb2d177208.js" as="script">
+    <link rel="preload" href="/static/build/js/manifest.0da9967b290bf7ea4e40.js" as="script">
+	
+	  <link href="/static/build/css/app.a714d73c6c4536062f12a018429f511f.css" rel="stylesheet">
+	
 {% endblock %}
 
-{% block headline %}
+{%- block appcontent %}
+	<div id="app"></div>
+
+	
+	<script src="/static/build/js/manifest.0da9967b290bf7ea4e40.js"></script>
+	
+	<script src="/static/build/js/vendor.b411de1678903c8a4c80.js"></script>
+	
+	<script src="/static/build/js/app.32d2de4772f4f9fb719f.js"></script>
+	
 {% endblock %}
 
-{% block basecontent %}
-  <div class="page-content page-content--top-padding">
-    <div class="grid">
-      <div class="grid__col-sm-6">
-        <p class="mui--text-headline">
-          We operate <a href="https://hasjob.co/" class="click">Hasjob</a>,
-          hang out on a <a href="https://friends.hasgeek.com/" class="click">Slack channel</a>, and
-          <a href="https://github.com/hasgeek" class="click">publish our code</a>.
-          Our activities reach thousands of developers every month.
-        </p>
-      </div>
-      <div class="grid__col-sm-6">
-        <p class="mui--text-headline">
-          <a href="https://talkfunnel.com/" class="click">Speak at our events</a>,
-          or <a href="http://eepurl.com/cygsfr" class="click">sign up to be notified</a> when we do one.
-          Watch videos from past events on <a href="https://hasgeek.tv/" class="click">HasGeek TV</a>.
-        </p>
-      </div>
-      <div class="grid__col-sm-12">
-        <h1 class="mui--text-headline">
-          {%- if g.profile %}
-            {{ g.profile.description }}
-          {%- else %}
-            {{ config['WELCOME_MESSAGE'] }}
-          {% endif %}
-        </h1>
-      </div>
-    </div>
-    {% if spaces %}
-      <ul class="grid spaces">
-        {% for space in spaces %}
-          <li class="grid__col-12 grid__col-xs-12 grid__col-sm-6 grid__col-lg-4">
-            <div class="grid__cell">
-              <a href="{{ space.url_for() }}" class="clickable-card">
-                <div class="card">
-                  <div class="card__image-wrapper">
-                    {% if space.bg_image %}
-                      <img class="card__image" src="{{ space.bg_image }}" alt="{{ space.title }}"/>
-                    {% else %}
-                      <div class="card__image--default">
-                        <img class="card__image" src="https://images.hasgeek.com/embed/file/5084bed3b3254c548bdcc119cd7b12ef" alt="{{ space.title }}"/>
-                        <p class="card__image__tagline">{{ space.title }}</p>
-                      </div>
-                    {% endif %}
-                  </div>
-                  <div class="card__title">
-                    <h3 class="mui--text-title card__title__heading">{{ space.title }}</h3>
-                    <h4 class="mui--text-caption card__title__heading">{{ space.datelocation }}</h4>
-                  </div>
-                  {% if space.tagline %}
-                    <div class="card__body">
-                      <p class="mui--text-body2">{{ space.tagline }}</p>
-                    </div>
-                  {% endif %}
-                  <div class="mui-divider"></div>
-                  <div class="card__footer">
-                    <a href="{{ space.url_for() }}" class="mui-btn mui-btn--small mui-btn--flat mui-btn--primary">Proposals</a>
-                    <a href="{{space.buy_tickets_url}}" class="mui-btn mui-btn--small mui-btn--flat mui-btn--accent">Tickets</a>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </li>
-        {%- endfor -%}
-      </ul>
-    {% else %}
-    <div class="grid">
-      <div class="grid__col-sm-12">
-        <p class="mui--text-headline">{% trans %}There are no proposal spaces at this time.{% endtrans %}
-          {% if 'new-space' in g.permissions %}<a href="{{g.profile.url_for('new-space')}}">{% trans %}Create one{% endtrans %}</a>.{% endif %}
-        </p>
-      </div>
-    </div>
-    {% endif %}
-  </div>
+{% block serviceworker %}
+<script>!function(){"use strict";var o=Boolean("localhost"===window.location.hostname||"[::1]"===window.location.hostname||window.location.hostname.match(/^127(?:\.(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)){3}$/));window.addEventListener("load",function(){"serviceWorker"in navigator&&("https:"===window.location.protocol||o)&&navigator.serviceWorker.register("service-worker.js").then(function(o){o.onupdatefound=function(){if(navigator.serviceWorker.controller){var n=o.installing;n.onstatechange=function(){switch(n.state){case"installed":break;case"redundant":throw new Error("The installing service worker became redundant.")}}}}}).catch(function(o){console.error("Error during service worker registration:",o)})})}();</script>
 {% endblock %}
