--- a/funnel/static/sass/_contacts.scss
+++ b/funnel/static/sass/_contacts.scss
@@ -1,7 +1,7 @@
 .contact-download-btn {
   position: relative;
   top: 6px;
-  left: -15px;
+  left: -6px;
 }
 
 .scanner-wrapper {
@@ -22,9 +22,8 @@
     text-align: center;
     color: #fff;
     z-index: 1001;
+    font-size: 100px;
     opacity: 0.5;
-    width: 100px;
-    height: 100px;
   }
 }
 
