--- a/funnel/static/sass/_search.scss
+++ b/funnel/static/sass/_search.scss
@@ -6,9 +6,13 @@
 }
 .search-icon {
   width: 20px;
-  height: 12px;
   display: inline-block;
   position: absolute;
   left: 8px;
-  top: 13px;
+}
+.search-icon:after {
+  content: '🔍';
+  opacity: 0.4;
+  position: relative;
+  top: 1px;
 }
