--- a/funnel/templates/event.html.jinja2
+++ b/funnel/templates/event.html.jinja2
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="grid__col-xs-6 grid__col-sm-4 grid__col-md-6 grid__col-lg-3">
-      <h3 class="mui--text-title">{{event.title}}&nbsp;<a href="{{ event.url_for('edit') }}" arial-label="{% trans %}Edit{% endtrans %}">{{ faicon(icon='edit', icon_size='subhead') }}</a></h3>
+      <h3 class="mui--text-title">{{event.title}}&nbsp;{% if event.view_for('edit').is_available() %}<a href="{{ event.url_for('edit') }}" arial-label="{% trans %}Edit{% endtrans %}">{{ faicon(icon='edit', icon_size='subhead') }}</a></h3>{%- endif %}
     </div>
     <div class="grid__col-xs-6 grid__col-sm-8 grid__col-md-6 grid__col-lg-9">
       <h3 class="mui--text-right" id="participants-count">
@@ -45,6 +45,7 @@
       </form>
     </div>
     <div class="grid__col-xs-12 grid__col-md-9">
+    {% if event.view_for('badges').is_available() %}
       <ul class="mui-list--inline">
         <li><a href="{{ event.url_for('badges') }}" target="_blank" class="mui-btn mui-btn--small mui-btn--raised mui-btn--primary" data-cy="badges-to-printed">Badges to be printed</a></li>
          <li><a href="{{ event.url_for('label_badges') }}" target="_blank" class="mui-btn mui-btn--small mui-btn--raised mui-btn--primary" data-cy="label-badges-to-printed">Label badges to be printed</a></li>
@@ -57,6 +58,7 @@
           </form>
         </li>
       </ul>
+    {%- endif %}
     </div>
   </div>
   <div class="grid">
@@ -82,7 +84,7 @@
               <td class='js-searchable' data-th="Company">{{ company }}</td>
               <td class='buttongrp-column'>
                 <ul class="mui-list--unstyled">
-                  {{#if isUsher || isConcierge}}
+                  {{#if hasBadgeViewAccess }}
                   <li>
                     <a href="{{ badge_url }}" {{#badge_printed}} class="mui-btn mui-btn--small mui-btn--raised mui-btn--accent" {{/badge_printed}} {{^badge_printed}} class="mui-btn mui-btn--small mui-btn--raised mui-btn--default" {{/badge_printed}} target="_blank" data-cy="show-badge">Show badge</a>
                   </li>
@@ -103,7 +105,7 @@
                       {{/if}}
                     </form>
                   </li>
-                  {{#if isConcierge}}
+                  {{#if hasEditAccess}}
                   <li>
                     <a href="{{ edit_url }}" class="mui--text-hyperlink" target="_blank" data-cy="edit-attendee-details">Edit attendee details</a>
                   </li>
@@ -137,8 +139,8 @@
     9. There are two check-in counters & one counters has internet and the other counter doesn't: They have checked-in few same participants. Verify both counters have the recent check-in status of participants, once internet is up.*/
     var eventConfig = {};
     eventConfig.checkin = {
-      isConcierge: {%- if project.current_roles.concierge %} true {% else %} false {%- endif %},
-      isUsher: {%- if project.current_roles.usher %} true {% else %} false {%- endif %},
+      hasBadgeViewAccess: {%- if event.view_for('badges').is_available() %} true {% else %} false {%- endif %},
+      hasEditAccess: {%- if event.view_for('edit').is_available() %} true {% else %} false {%- endif %},
       checkinUrl: "{{ event.url_for('checkin') }}",
       participantlistUrl: "{{ event.url_for('participants_json') }}",
       eventName: "{{ project.name }}" + "-" + "{{event.title}}".replace(/ /g,'-'),
