--- a/funnel/templates/organization_membership.html.jinja2
+++ b/funnel/templates/organization_membership.html.jinja2
@@ -7,7 +7,7 @@
       <div class="grid__col-xs-12">
         {% raw %}
         <div id="manage-membership">
-          <div class="membership-wrapper" v-if="isUserProfileAdmin">
+          <div class="membership-wrapper" v-if="isMember">
             <div class="content-box mui--z1" @click="isMobile ? showInfo = !showInfo : null" role="button" aria-label="What role should I assign? Read more">
               <p class="mui--text-headline mui--text-bold">What role should I assign?</p>
               <p class="mui--text-subhead">Read this before adding a new member
@@ -145,6 +145,7 @@
         divElem: "#manage-membership",
         memberTemplate: '#member-template',
         isUserProfileAdmin: {%- if profile.current_roles.owner %} true {% else %} false {%- endif %},
+        isMember: {%- if profile.current_roles.owner or profile.current_roles.admin %} true {% else %} false {%- endif %}
       };
 
       HasGeek.Membership(membershipConfig);
