--- a/funnel/templates/index.html.jinja2
+++ b/funnel/templates/index.html.jinja2
@@ -58,7 +58,7 @@
             <h2 class="mui--text-display1 mui--text-bold" data-cy="profile-title">{{ profile.title }}</h2>
           </a>
           <div class="mui--text-headline">{{ profile.description.html }}</div>
-          {%- if profile.current_roles.admin %}
+          {%- if g.profile.view_for('edit').is_available() %}
           <p>
             <a class="mui-btn mui-btn--primary mui-btn--raised" data-cy-btn="profile-crew" href="{{ profile.urls['members'] }}">{%- if profile.current_roles.owner %}{% trans %}Manage members{% endtrans %}{% else %}{% trans %}View members{% endtrans %}{% endif %}</a>
             <a class="mui-btn mui-btn--secondary mui-btn--raised" data-cy-btn="edit-details" href="{{ g.profile.url_for('edit') }}">{% trans %}Edit details{% endtrans %}</a>
@@ -260,7 +260,7 @@
           </div>
         </div>
         <ul class="grid projects" role="list">
-          {%- if profile.current_roles.admin %}
+          {%- if g.profile.view_for('new_project').is_available() %}
             <li class="grid__col-12 grid__col-xs-12 grid__col-sm-6 grid__col-lg-4" role="listitem">
               <a class="card card--upcoming card--new clickable-card" href="{{ g.profile.url_for('new_project')}}" aria-label="Create new project" data-cy="new-project" data-action="Add new project">
                 <div class="card__image-wrapper">
