--- a/funnel/templates/proposals.html.jinja2
+++ b/funnel/templates/proposals.html.jinja2
@@ -39,7 +39,7 @@
                 {%- if proposal.user != proposal.speaker %}
                   <small class="mui--text-caption mui--text-accent">via {{ proposal.user.pickername }}</small>
                 {%- endif %}
-                {%- if project.current_roles.editor %}
+                {%- if project.view_for('cfp').is_available() %}
                   {%- if proposal.has_outstation_speaker %}
                     {{ faicon(icon='plane', icon_size='subhead', baseline=false, css_class='mui--align-middle') }}
                     <span class="mui--hide" aria-label="{% trans %}Outstation speaker{% endtrans %}"></span>
@@ -81,7 +81,7 @@
   <div class="mui-container">
     <div class="page-content page-content--mob-nav">
       <div class="grid project-section">
-       {% if project.current_roles.editor or project.current_roles.reviewer or not project.cfp_state.NONE -%}
+       {% if project.view_for('cfp').is_available() or not project.cfp_state.NONE -%}
         <div class="grid__col-xs-12 about__details" id="call-for-proposal">
           {%- if project.instructions and project.instructions != "None" %}
             <h2 class="mui--text-display1 project-section__headline mui--text-left mui--text-bold">{% trans %}Proposal guidelines{% endtrans %}</h2>
@@ -122,7 +122,7 @@
       <div class="grid project-section" id="proposals">
         <div class="grid__col-xs-12">
           <h2 class="mui--text-display1 mui--text-left project-section__headline">{% trans %}All proposals{% endtrans %}</h2>
-            {%- if project.current_roles.editor %}
+            {%- if project.view_for('cfp').is_available() %}
               <div>
                 <form class="mui-form mui--pull-left search search--50 mui--z1">
                   <div class="mui-textfield">
