--- a/funnel/templates/project_membership.html.jinja2
+++ b/funnel/templates/project_membership.html.jinja2
@@ -32,7 +32,7 @@
       <div class="grid__col-xs-12">
         {% raw %}
         <div id="manage-membership">
-          <div class="membership-wrapper" v-if="isMember || isUserProfileAdmin">
+          <div class="membership-wrapper" v-if="isMember || hasAddPermission">
             <div class="content-box mui--z1" @click="isMobile ? showInfo = !showInfo : null" role="button" aria-label="What role should I assign? Read more">
               <p class="mui--text-headline mui--text-bold">What role should I assign?</p>
               <p class="mui--text-subhead">Read this before adding a new member
@@ -78,11 +78,11 @@
           </div>
           <div class="membership-wrapper">
             <div class="mui--clearfix">
-              <div class="mui--text-center btn-wrapper membership-wrapper--left" v-if="isUserProfileAdmin">
+              <div class="mui--text-center btn-wrapper membership-wrapper--left" v-if="hasAddPermission">
                 <button class="mui-btn mui-btn--raised mui-btn--primary full-width-btn" @click="fetchForm($event, newMemberUrl)" aria-label="Add new member" data-cy-btn="add-member"><svg class="fa5-icon fa5--align-baseline" aria-hidden="true" role="img"><use v-bind:xlink:href="svgIconUrl + '#plus'"></use></svg> Add new member</p></button>
                 <hr class="mui--hidden-xl">
               </div>
-              <div class="mui--text-center" v-if="members" :class="[isUserProfileAdmin? 'membership-wrapper--right': '']">
+              <div class="mui--text-center" v-if="members" :class="[hasAddPermission? 'membership-wrapper--right': '']">
                 <form class="mui-form mui--d-inlineblock search mui--z1" v-on:submit.prevent>
                   <div class="mui-textfield">
                     <input class="field-search" type="text" name="key" value="" placeholder="Search member…" v-model="search" @input="onChange"/>
@@ -108,7 +108,7 @@
                   </p>
                   <transition name="slide-fade">
                     <div v-if="role.showMembers">
-                      <div class="membership-wrapper__members__list membership-wrapper__members__list--nomargin" v-for="member in members" :class="[search && member.hide ? 'mui--hide' : '', isUserProfileAdmin ?  '' : 'membership-wrapper__members__list--viewonly']" @click="fetchForm($event, member.urls.edit, member)" title="Edit" aria-label="Edit" role="button" v-if="member[role.roleKey]">
+                      <div class="membership-wrapper__members__list membership-wrapper__members__list--nomargin" v-for="member in members" :class="[search && member.hide ? 'mui--hide' : '', hasAddPermission ?  '' : 'membership-wrapper__members__list--viewonly']" @click="fetchForm($event, member.urls.edit, member)" title="Edit" aria-label="Edit" role="button" v-if="member[role.roleKey]">
                         <member :member="member"></member>
                       </div>
                     </div>
@@ -116,7 +116,7 @@
                 </div>
               </div>
               <div v-if="view == 'name'" class="membership-wrapper__members">
-                <div class="membership-wrapper__members__list" v-for="member in members" :class="[search && member.hide ? 'mui--hide' : '', isUserProfileAdmin ? '' : 'membership-wrapper__members__list--viewonly']" @click="fetchForm($event, member.urls.edit, member)" title="Edit" aria-label="Edit" role="button">
+                <div class="membership-wrapper__members__list" v-for="member in members" :class="[search && member.hide ? 'mui--hide' : '', hasAddPermission ? '' : 'membership-wrapper__members__list--viewonly']" @click="fetchForm($event, member.urls.edit, member)" title="Edit" aria-label="Edit" role="button">
                    <member :member="member"></member>
                 </div>
               </div>
@@ -199,8 +199,8 @@
         ],
         divElem: "#manage-membership",
         memberTemplate: '#member-template',
-        isUserProfileAdmin: {%- if project.profile.current_roles.admin %} true {% else %} false {%- endif %},
-        isMember: {%- if project.current_roles.editor or project.current_roles.concierge or project.current_roles.usher %} true {% else %} false {%- endif %}
+        hasAddPermission: {%- if project.view_for('new_member').is_available() %} true {% else %} false {%- endif %},
+        isMember: {%- if project.current_roles.crew %} true {% else %} false {%- endif %}
       };
       HasGeek.Membership(membershipConfig);
     });
